--- a/poem.rmd
+++ b/poem.rmd
@@ -15,12 +15,33 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-
+’Twas brillig, and the slithy toves  
+      Did gyre and gimble in the wabe:  
+All mimsy were the borogoves,  
+      And the mome raths outgrabe.  
+     “Beware the Jabberwock, my son!  
+     
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+Two roads diverged in a yellow wood,  
+And sorry I could not travel both  
+And be one traveler, long I stood  
+And looked down one as far as I could  
+To where it bent in the undergrowth;  
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
-
+"The sun was shining on the sea,  
+      Shining with all his might:  
+      
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+Once upon a midnight dreary, while I pondered, weak and weary,  
+Over many a quaint and curious volume of forgotten lore—  
+    While I nodded, nearly napping, suddenly there came a tapping,  
+As of some one gently rapping, rapping at my chamber door.  
+“’Tis some visitor,” I muttered, “tapping at my chamber door—  
+            Only this and nothing more.”  
+
+  Ah, distinctly I remember it was in the bleak December;  
+And each separate dying ember wrought its ghost upon the floor.  
